# wazuh-install

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  INSTALL.md  README.md  README_GITHUB.md  README_V2.md  deploy.py  pyproject.toml  requirements.txt  setup.py  test_suite.py  wazuh-enhanced-ui  wazuh-smart-ui  wazuh_configurator.py  wazuh_installer.py  wazuh_menu.py  wazuh_smart_installer.py
config/: profiles.json
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/templates/: README.md
docs/usage/: README.md
scripts/: deploy_simulation.py  validate_config.py
tests/: __init__.py  conftest.py  test_config_manager.py  test_core.py  test_dashboard_configurator.py  test_monitoring_configurator.py  test_performance_configurator.py  test_security_configurator.py  test_security_modules_configurator.py
wazuh_configurator/: __init__.py
wazuh_configurator/config/: paths.py
wazuh_configurator/core/: __init__.py  base_configurator.py  config_manager.py  wazuh_detector.py
wazuh_configurator/dashboard_templates/: __init__.py  endpoint_security.py  executive_compliance.py  soc_overview.py  ssh_auth_monitoring.py  threat_hunting.py  vulnerability_exposure.py
wazuh_configurator/strategies/: __init__.py  dashboard_configurator.py  monitoring_configurator.py  performance_configurator.py  security_configurator.py  security_modules_configurator.py
wazuh_configurator/utils/: __init__.py  cache.py  exceptions.py  file_handler.py  logger.py  (+1 more)
wazuh_devsec_config_generator/: __init__.py  cli.py  generator.py  generator_v2.py  utils.py
(+32 files in other folders)
