[project]
name = "wazuh-devsec-config-generator"
version = "2.0.0"
description = "Générateur complet et production-ready de configuration Wazuh DevSec pour entreprise de développement/édition logiciel (GitLab, Jenkins, Docker, VS Code, IntelliJ, etc.) avec interface TUI et détection automatique"
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "textual>=0.41.0",
    "requests>=2.28.0",
]
authors = [{ name = "Expert Wazuh + Python", email = "devsec@entreprise.fr" }]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["wazuh_devsec_config_generator*"]

[project.scripts]
wazuh-generator = "wazuh_devsec_config_generator.generator:main"
wazuh-tui = "wazuh_devsec_config_generator.generator_v2:main"
wazuh-scan = "wazuh_devsec_config_generator.core.service_detector:main"
